# Space_Navigation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.claude/agents/: algorithm-architect.md  cpp-engineer.md  data-wrangler.md  experiment-runner.md  librarian.md  research-analyst.md  reviewer.md
apps/: CMakeLists.txt  batch_eval.cpp  measure_limb.cpp
include/limbnav/: fit.hpp  geometry.hpp  io.hpp  limb.hpp  measure.hpp  preprocess.hpp  types.hpp
research/: DECK.md  RESEARCH_LOG.md  SESSION_LOG.md  STATE.json
research/literature/: SEARCH_LOG.md
review/: NEEDS_REVIEW.md
scripts/: check_disk_budget.sh  make_geometry_sidecar.py  make_ground_truth.py
src/: CMakeLists.txt
src/fit/: CMakeLists.txt  fit.cpp
src/geometry/: CMakeLists.txt  geometry.cpp
src/io/: CMakeLists.txt  io.cpp
src/limb/: CMakeLists.txt  limb.cpp
src/measure/: CMakeLists.txt  measure.cpp
src/preprocess/: CMakeLists.txt  preprocess.cpp
tests/: CMakeLists.txt  test_g0.cpp  test_geometry.cpp  test_io.cpp  test_localizers.cpp  test_preprocess.cpp
tests/synthetic/: renderer.cpp  renderer.hpp
